# sigil-ml

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
kitty-specs/001-cloud-serving-mode/: data-model.md  meta.json  plan.md  quickstart.md  research.md  spec.md  tasks.md
kitty-specs/001-cloud-serving-mode/checklists/: requirements.md
kitty-specs/001-cloud-serving-mode/contracts/: openapi-cloud-extensions.yaml
kitty-specs/002-storage-abstraction/: meta.json  spec.md
kitty-specs/002-storage-abstraction/checklists/: requirements.md
kitty-specs/003-model-storage-abstraction/: meta.json  plan.md  spec.md  tasks.md
kitty-specs/003-model-storage-abstraction/checklists/: requirements.md
kitty-specs/004-cloud-training-pipeline/: data-model.md  meta.json  plan.md  research.md  spec.md  tasks.md
kitty-specs/004-cloud-training-pipeline/checklists/: requirements.md
kitty-specs/004-cloud-training-pipeline/contracts/: cli-contract.md
kitty-specs/004-cloud-training-pipeline/tasks/: WP01-cloud-training-entrypoint.md  WP02-per-tenant-training-logic.md  WP03-batch-training-tenant-discovery.md  WP04-concurrent-training-lock.md  WP05-aggregate-model-training.md  WP06-training-observability.md
kitty-specs/005-ml-signal-pipeline/: meta.json  spec.md
src/sigil_ml/: app.py  cli.py  config.py  features.py  logging_config.py  poller.py  routes.py  server.py  store.py  store_postgres.py  store_sqlite.py
src/sigil_ml/models/: activity.py  (+5 more)
tests/: test_features.py  test_models.py  test_server.py  test_signals.py
(+11 files in other folders)
