[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigil-ml"
version = "0.1.0"
description = "ML prediction sidecar for the Sigil developer intelligence daemon"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Sigil Contributors" }]
keywords = ["developer-tools", "machine-learning", "productivity", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/sigil-tech/sigil-ml"
Repository = "https://github.com/sigil-tech/sigil-ml"
Issues = "https://github.com/sigil-tech/sigil-ml/issues"
"Sigil Daemon" = "https://github.com/sigil-tech/sigil"

[project.scripts]
sigil-ml = "sigil_ml.server:main"
